; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/zd1211rw/extr_zd_mac.c_beacon_enable.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/zd1211rw/extr_zd_mac.c_beacon_enable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.zd_mac = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32, i32 }

@.str = private unnamed_addr constant [2 x i8] c"\0A\00", align 1
@jiffies = common dso_local global i32 0, align 4
@zd_workqueue = common dso_local global i32 0, align 4
@BEACON_WATCHDOG_DELAY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.zd_mac*)* @beacon_enable to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @beacon_enable(%struct.zd_mac* %0) #0 {
  %2 = alloca %struct.zd_mac*, align 8
  store %struct.zd_mac* %0, %struct.zd_mac** %2, align 8
  %3 = load %struct.zd_mac*, %struct.zd_mac** %2, align 8
  %4 = call i32 @zd_mac_dev(%struct.zd_mac* %3)
  %5 = call i32 @dev_dbg_f(i32 %4, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  %6 = load i32, i32* @jiffies, align 4
  %7 = load %struct.zd_mac*, %struct.zd_mac** %2, align 8
  %8 = getelementptr inbounds %struct.zd_mac, %struct.zd_mac* %7, i32 0, i32 0
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 1
  store i32 %6, i32* %9, align 4
  %10 = load i32, i32* @zd_workqueue, align 4
  %11 = load %struct.zd_mac*, %struct.zd_mac** %2, align 8
  %12 = getelementptr inbounds %struct.zd_mac, %struct.zd_mac* %11, i32 0, i32 0
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 0
  %14 = load i32, i32* @BEACON_WATCHDOG_DELAY, align 4
  %15 = call i32 @queue_delayed_work(i32 %10, i32* %13, i32 %14)
  ret void
}

declare dso_local i32 @dev_dbg_f(i32, i8*) #1

declare dso_local i32 @zd_mac_dev(%struct.zd_mac*) #1

declare dso_local i32 @queue_delayed_work(i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
